# model

./: Cargo.toml  FacePlateDetector.java  FaceRecognizer.java  PlateRecognizer.java  README.en.md  README.md  README.txt  build.rs  car_detector.py  car_rec.py  face_detector.py  face_plate.py  feature.py  main.py  sh.3588.deploy.sh  sh.3588.release.sh
api/: Logger.java  ModelLoader.java
api/android/: ImageProcesser.java  Logger.java  ModelLoader.java
base/: OnnxDeployer.java
core/: FaceDetector.java  FacePlateDetector.java  FaceRecognizer.java  OnnxDeployer.java  PlateDetector.java  PlateRecognizer.java
core/base/: OnnxDeployer.java
core/detector/: FaceDetector.java  FacePlateDetector.java  PlateDetector.java
core/recognizer/: FaceRecognizer.java  PlateRecognizer.java
examples/: bench.rs  utils.rs
face/: .gitignore  Cargo.toml  README.md  build.rs
face/examples/: ex.rs
face/src/: face.rs  lib.rs  search.rs  types.rs  utils.rs
license/: Cargo.toml  README.md  sh.3588.release.sh
license/examples/: cig.rs  license.rs  yolo26_e2e.rs  yolo8.rs
license/models/: cig_sd_138.yolo8.txt  cig_xm_181.yolo8.txt
license/src/: lib.rs  pp.rs  yolo.rs  yolo_e2e.rs
models/: face_det.onnx  models.txt
onnx/: README.md
onnx/core/: OnnxDeployer.java
onnx/structure/: Face.java  Plate.java  Position.java
onnx/utils/: DataHelper.java
src/: lib.rs  utils.rs  yolo.rs
structure/: Common.java  Face.java  Plate.java  Position.java
test_data/: Thumbs.db
test_img/: Thumbs.db
util/: ModelImageHelper.java
utils/: DataHelper.java
(+10 files in other folders)
