[package]
name = "face_rs"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/linkailang/face_rs"
readme = "README.md"

[dependencies]
libc = "0.2"
image = { version = "0.25.2" }
ort = { version = "=2.0.0-rc.10", features = ["load-dynamic", "ndarray"], default-features = false }
imageproc = "0.25.0"
ndarray = "0.16.1"
nalgebra = "0.33"
anyhow = "1.0.86"
float-cmp = "0.9"
once_cell = "1.19.0"
futures = "0.3.30"
tokio = { version = "1.48.0", features = ["full"] }
num_cpus = "1.16.0"
byteorder = "1.4"
usearch = "2.22.0"
